# photo_management

./: .gitignore  LICENSE  README.md  manage-photos.py  pyproject.toml  setup.py
photo_management/: manage_photos.py
src/photo_management/: photo_importer.py  photo_management.py
